Added punctuation as a test.

--- a/pixi.html
+++ b/pixi.html
@@ -6,7 +6,7 @@
 </head>
   <script src="./pixi.min.js"></script>
 <body>
-  <h1>What Up Losers</h1>
+  <h1>What Up Losers?</h1>
   <script type="text/javascript">
     let type = "WebGL"
     if(!PIXI.utils.isWebGLSupported()){
