--- a/pixi.html
+++ b/pixi.html
@@ -14,6 +14,28 @@
     }
 
     PIXI.utils.sayHello(type)
+
+    //Create a Pixi Application
+  let app = new PIXI.Application({width: 256, height: 256});
+  app.renderer.backgroundColor = 0x064439;
+  // app.renderer.autoResize = true;
+  // app.renderer.resize(512, 512);
+  app.renderer.view.style.position = "absolute";
+  app.renderer.view.style.display = "block";
+  app.renderer.autoResize = true;
+  app.renderer.resize(window.innerWidth, window.innerHeight);
+
+  //Add the canvas that Pixi automatically created for you to the HTML document
+  document.body.appendChild(app.view);
+
+//   let app = new PIXI.Application({ 
+//     width: 256,         // default: 800
+//     height: 256,        // default: 600
+//     antialias: true,    // default: false
+//     transparent: false, // default: false
+//     resolution: 1       // default: 1
+//   }
+// );
   </script>
 </body>
 </html>
