--- a/pixi.html
+++ b/pixi.html
@@ -2,44 +2,91 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hello World</title>
+  <title>Skrenk's World</title>
 </head>
   <script src="./pixi.min.js"></script>
 <body>
-  <h1>What Up Losers?</h1>
+  <h1>Welcome To Da Swamp</h1>
   <script type="text/javascript">
-    let type = "WebGL"
-    if(!PIXI.utils.isWebGLSupported()){
-      type = "canvas"
+    //Aliases
+  let Application = PIXI.Application,
+      loader = PIXI.loader,
+      resources = PIXI.loader.resources,
+      Sprite = PIXI.Sprite;
+
+  //Create a Pixi Application
+  let app = new Application({ 
+      width: 256, 
+      height: 256,                       
+      antialias: true, 
+      transparent: false, 
+      resolution: 1
     }
-
-    PIXI.utils.sayHello(type)
-
-    //Create a Pixi Application
-  let app = new PIXI.Application({width: 256, height: 256});
-  app.renderer.backgroundColor = 0x064439;
-  // app.renderer.autoResize = true;
-  // app.renderer.resize(512, 512);
-  app.renderer.view.style.position = "absolute";
-  app.renderer.view.style.display = "block";
-  app.renderer.autoResize = true;
-  app.renderer.resize(window.innerWidth, window.innerHeight);
+  );
 
   //Add the canvas that Pixi automatically created for you to the HTML document
   document.body.appendChild(app.view);
 
+  //load an image and run the `setup` function when it's done
+  loader
+    .add("./images/skrenk.jpg")
+    .load(setup);
+
+  //This `setup` function will run when the image has loaded
+  function setup() {
+
+    //Create the cat sprite
+    let skrenk = new Sprite(resources["./images/skrenk.jpg"].texture);
+    
+    //Add the cat to the stage
+    app.stage.addChild(skrenk);
+  }
+  app.renderer.view.style.position = "absolute";
+  app.renderer.view.style.display = "block";
+  app.renderer.autoResize = true;
+  app.renderer.resize(window.innerWidth, window.innerHeight);
+  </script>
+  <style>* {padding: 0; margin: 0}</style>
+</body>
+</html>
+
+
+
+
+<!-- 
+
+let type = "WebGL"
+if(!PIXI.utils.isWebGLSupported()){
+  type = "canvas"
+}
+
+PIXI.utils.sayHello(type)
+
+//Create a Pixi Application
+let app = new PIXI.Application({width: 256, height: 256});
+app.renderer.backgroundColor = 0x064439;
+// app.renderer.autoResize = true;
+// app.renderer.resize(512, 512);
+app.renderer.view.style.position = "absolute";
+app.renderer.view.style.display = "block";
+app.renderer.autoResize = true;
+app.renderer.resize(window.innerWidth, window.innerHeight);
+
+//Add the canvas that Pixi automatically created for you to the HTML document
+document.body.appendChild(app.view);
+
 // sprite load in
 
-  PIXI.loader
-  .add("./images/skrenk.jpg")
-  .load(setup);
+PIXI.loader
+.add("./images/skrenk.jpg")
+.load(setup);
 
-  function setup() {
-    let sprite = new PIXI.Sprite(
-      PIXI.loader.resources["./images/skrenk.jpg"].texture
-    );
-    app.stage.addChild(sprite);
-  }
+function setup() {
+let sprite = new PIXI.Sprite(
+  PIXI.loader.resources["./images/skrenk.jpg"].texture
+);
+app.stage.addChild(sprite);
+}
 
 //   let app = new PIXI.Application({ 
 //     width: 256,         // default: 800
@@ -48,8 +95,4 @@
 //     transparent: false, // default: false
 //     resolution: 1       // default: 1
 //   }
-// );
-  </script>
-  <style>* {padding: 0; margin: 0}</style>
-</body>
-</html>
+// ); -->
