--- a/pixi.html
+++ b/pixi.html
@@ -30,6 +30,8 @@
   //load an image and run the `setup` function when it's done
   loader
     .add("./images/skrenk.jpg")
+    .add("./images/fion.jpg")
+    .add("./images/donka.jpg")
     .load(setup);
 
   //This `setup` function will run when the image has loaded
@@ -37,9 +39,22 @@
 
     //Create the cat sprite
     let skrenk = new Sprite(resources["./images/skrenk.jpg"].texture);
+    let fion = new Sprite(resources["./images/fion.jpg"].texture);
+    let donka = new Sprite(resources["./images/donka.jpg"].texture);
     
     //Add the cat to the stage
     app.stage.addChild(skrenk);
+    app.stage.addChild(fion);
+    app.stage.addChild(donka);
+
+    skrenk.scale.x = 0.5;
+    skrenk.scale.y = 0.5;
+    donka.scale.set(0.5, 0.5);
+    donka.x = 500;
+    donka.y = 500;
+    fion.x = 700;
+    fion.y = 200;
+    fion.rotation = 0.5;
   }
   app.renderer.view.style.position = "absolute";
   app.renderer.view.style.display = "block";
