Playing with blob loop, making way too many.

--- a/pixi3.html
+++ b/pixi3.html
@@ -74,9 +74,9 @@ function setup() {
   app.stage.addChild(door);
 
   //Make the blobs
-  let numberOfBlobs = 6,
-      spacing = 48,
-      xOffset = 150;
+  let numberOfBlobs = 666,
+      spacing = 0.200300000000040000000001,
+      xOffset = 249;
 
   //Make as many blobs as there are `numberOfBlobs`
   for (let i = 0; i < numberOfBlobs; i++) {
