Used xy velocity to make him run the map diagonally.

--- a/pixi3.html
+++ b/pixi3.html
@@ -106,7 +106,9 @@ function setup() {
     //Move the blob
     blob.x += 1;
     explorer.vx += 0.0025
+    explorer.vy += 0.0025
     explorer.x = explorer.vx
+    explorer.y = explorer.vy
     }
 
     //Start the loop
