Uploaded their keyboard movement code, which utilizes the key press and key release events to increase velocity and then, with the release, set the velocity to zero.

--- a/pixi3.html
+++ b/pixi3.html
@@ -34,7 +34,7 @@ loader
 
 //Define variables that might be used in more 
 //than one function
-let dungeon, explorer, treasure, door, id;
+let dungeon, explorer, treasure, door, id, state;
 
 function setup() {
 
@@ -130,6 +130,7 @@ function setup() {
 
     //Add the blob sprite to the stage
     app.stage.addChild(blob);
+    
   }
   
 }
